--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,10 @@ h1{
     width: 70%;
 }
 .Box{
+    margin-top: 40px;
     display: flex;
+    width: 80%;
+    margin: auto;
 }
 .Box_image{    
     text-align: center;
